fixed save state, content description

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,7 +13,8 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:src="@drawable/pizza"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:contentDescription="@string/logo"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
