--- a/app/src/main/res/layout/fragment_restaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_restaurant_detail.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/coordinator">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -34,7 +35,8 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/restaurant"
                     app:layout_collapseMode="parallax"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/banner"/>
 
             </FrameLayout>
 
