--- a/app/src/main/res/layout/viewholder_restaurant.xml
+++ b/app/src/main/res/layout/viewholder_restaurant.xml
@@ -77,7 +77,8 @@
             android:background="@drawable/ic_favorite_border_black_24dp"
             android:backgroundTint="#f00"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/favorite"/>
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
