--- a/app/src/main/res/layout/widget_menu.xml
+++ b/app/src/main/res/layout/widget_menu.xml
@@ -22,7 +22,8 @@
                 android:layout_height="32dp"
                 android:padding="5dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/restaurant"/>
+                android:src="@drawable/restaurant"
+                android:contentDescription="@string/widget_icon"/>
             <TextView
                 android:id="@+id/menu"
                 android:layout_width="wrap_content"
